force-app/main/default/objects/Staff__c/fields/Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Salary__c</fullName>
    <label>Basic Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>