force-app/main/default/objects/Staff__c/fields/Eduaction__c.field-meta.xml
<CustomField>
    <fullName>Eduaction__c</fullName>
    <label>Eduaction</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>