force-app/main/default/objects/Staff__c/fields/Name_of_the_employee__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_employee__c</fullName>
    <label>Name of the employee</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>