force-app/main/default/objects/Staff__c/fields/Role_Of_The_Employee__c.field-meta.xml
<CustomField>
    <fullName>Role_Of_The_Employee__c</fullName>
    <label>Role Of The Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen Manager</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Assistant Cook</fullName>
            </value>
            <value>
                <fullName>Dish Washer</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Waiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>